--- a/payment.html
+++ b/payment.html
@@ -45,5 +45,19 @@
         </div>
     </nav>
 
+
+    <!-- Header -->
+
+    <header class="masthead">
+        <div class="container h-100">
+            <div class="row h-100 align-items-center">
+                <div class="col-12 text-center">
+                    <h1 class="fw-light">VENOM</h1>
+                    <p class="lead">LIBERTY BY SCOPE CINEMA - COLPETTY  |  ENGLISH - 2D</p>
+                </div>
+            </div>
+        </div>
+    </header>
+
 </body>
 </html>
