--- a/Location.html
+++ b/Location.html
@@ -52,7 +52,7 @@
                 <div class="row h-100 align-items-center">
                     <div class="col-12 text-center">
                         <h1 class="fw-light">LOCATIONS</h1>
-                        <p class="lead">A great starter layout for a landing page</p>
+                        <p class="lead">Your Cinematic Escape Awaits</p>
                     </div>
                 </div>
             </div>
