Home Page Images

--- a/home.html
+++ b/home.html
@@ -108,7 +108,7 @@
 
                     <div class="card">
                         <div class="bg-image hover-overlay" data-mdb-ripple-init data-mdb-ripple-color="light">
-                            <img src="/Home/now showing/gladiator 2.jpg" class="img-fluid" />
+                            <img src="now showing/gladiator 2.jpg" class="img-fluid" />
                             <a href="#!">
                                 <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                             </a>
@@ -126,7 +126,7 @@
 
                     <div class="card">
                         <div class="bg-image hover-overlay" data-mdb-ripple-init data-mdb-ripple-color="light">
-                            <img src="/Home/now showing/kanguwa.avif" class="img-fluid" />
+                            <img src="now showing/kanguwa.avif" class="img-fluid" />
                             <a href="#!">
                                 <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                             </a>
@@ -144,7 +144,7 @@
 
                     <div class="card">
                         <div class="bg-image hover-overlay" data-mdb-ripple-init data-mdb-ripple-color="light">
-                            <img src="/Home/now showing/Venom 3.jpg" class="img-fluid" />
+                            <img src="now showing/Venom 3.jpg" class="img-fluid" />
                             <a href="#!">
                                 <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                             </a>
@@ -170,7 +170,7 @@
 
                     <div class="card">
                         <div class="bg-image hover-overlay" data-mdb-ripple-init data-mdb-ripple-color="light">
-                            <img src="/Home/now showing/Red one .jpg" class="img-fluid" />
+                            <img src="now showing/Red one .jpg" class="img-fluid" />
                             <a href="#!">
                                 <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                             </a>
@@ -188,7 +188,7 @@
 
                     <div class="card">
                         <div class="bg-image hover-overlay" data-mdb-ripple-init data-mdb-ripple-color="light">
-                            <img src="/Home/now showing/amaran.jpg" class="img-fluid" />
+                            <img src="now showing/amaran.jpg" class="img-fluid" />
                             <a href="#!">
                                 <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                             </a>
@@ -206,7 +206,7 @@
 
                     <div class="card">
                         <div class="bg-image hover-overlay" data-mdb-ripple-init data-mdb-ripple-color="light">
-                            <img src="/Home/now showing/lucky baskhar.jpg" class="img-fluid" />
+                            <img src="now showing/lucky baskhar.jpg" class="img-fluid" />
                             <a href="#!">
                                 <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                             </a>
@@ -262,7 +262,7 @@
 
                         <div class="card">
                             <div class="bg-image hover-overlay" data-mdb-ripple-init data-mdb-ripple-color="light">
-                                <img src="/Home/coming soon/soni 3.webp" class="img-fluid" />
+                                <img src="coming soon/soni 3.webp" class="img-fluid" />
                                 <a href="#!">
                                     <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                                 </a>
@@ -279,7 +279,7 @@
 
                         <div class="card">
                             <div class="bg-image hover-overlay" data-mdb-ripple-init data-mdb-ripple-color="light">
-                                <img src="/Home/coming soon/mufasa the lion kin.jpeg" class="img-fluid" />
+                                <img src="coming soon/mufasa the lion kin.jpeg" class="img-fluid" />
                                 <a href="#!">
                                     <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                                 </a>
@@ -296,7 +296,7 @@
 
                         <div class="card">
                             <div class="bg-image hover-overlay" data-mdb-ripple-init data-mdb-ripple-color="light">
-                                <img src="/Home/coming soon/moana 2.webp" class="img-fluid" />
+                                <img src="coming soon/moana 2.webp" class="img-fluid" />
                                 <a href="#!">
                                     <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                                 </a>
@@ -321,7 +321,7 @@
 
                         <div class="card">
                             <div class="bg-image hover-overlay" data-mdb-ripple-init data-mdb-ripple-color="light">
-                                <img src="/Home/coming soon/pushpa 2.webp" class="img-fluid" />
+                                <img src="coming soon/pushpa 2.webp" class="img-fluid" />
                                 <a href="#!">
                                     <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                                 </a>
@@ -338,7 +338,7 @@
 
                         <div class="card">
                             <div class="bg-image hover-overlay" data-mdb-ripple-init data-mdb-ripple-color="light">
-                                <img src="/Home/coming soon/kraven.webp" class="img-fluid" />
+                                <img src="coming soon/kraven.webp" class="img-fluid" />
                                 <a href="#!">
                                     <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                                 </a>
@@ -355,7 +355,7 @@
 
                         <div class="card">
                             <div class="bg-image hover-overlay" data-mdb-ripple-init data-mdb-ripple-color="light">
-                                <img src="/Home/coming soon/how to train your dragon.webp" class="img-fluid" />
+                                <img src="coming soon/how to train your dragon.webp" class="img-fluid" />
                                 <a href="#!">
                                     <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                                 </a>
