--- a/Location.html
+++ b/Location.html
@@ -82,7 +82,7 @@
             </article>
             <article class="postcard dark red">
                 <a class="postcard__img_link" href="#">
-                    <img class="postcard__img" src="image/Location page/ccc.jpeg" alt="Image Title" />
+                    <img class="postcard__img" src="Location/ccc.jpeg" alt="Image Title" />
                 </a>
                 <div class="postcard__text">
                     <h1 class="postcard__title red"><a href="#">SCOPE CINEMAS MULTIPLEX - Colombo City Centre</a></h1>
