--- a/Location.html
+++ b/Location.html
@@ -67,7 +67,7 @@
 
             <article class="postcard dark blue">
                 <a class="postcard__img_link" href="#">
-                    <img class="postcard__img" src="/image/Location page/liberty colpetty.jpg" alt="Image Title" />
+                    <img class="postcard__img" src="/Location/liberty colpetty.jpg" alt="Image Title" />
                 </a>
                 <div class="postcard__text">
                     <h1 class="postcard__title blue"><a href="#">LIBERTY BY SCOPE CINEMAS - Colpetty</a></h1>
@@ -82,7 +82,7 @@
             </article>
             <article class="postcard dark red">
                 <a class="postcard__img_link" href="#">
-                    <img class="postcard__img" src="Location/ccc.jpeg" alt="Image Title" />
+                    <img class="postcard__img" src="/Location/ccc.jpeg" alt="Image Title" />
                 </a>
                 <div class="postcard__text">
                     <h1 class="postcard__title red"><a href="#">SCOPE CINEMAS MULTIPLEX - Colombo City Centre</a></h1>
@@ -97,7 +97,7 @@
             </article>
             <article class="postcard dark green">
                 <a class="postcard__img_link" href="#">
-                    <img class="postcard__img" src="/image/Location page/liberty kiribathgoda.jpg" alt="Image Title" />
+                    <img class="postcard__img" src="/Location/liberty kiribathgoda.jpg" alt="Image Title" />
                 </a>
                 <div class="postcard__text">
                     <h1 class="postcard__title green"><a href="#">LIBERTY BY SCOPE CINEMAS - Kiribathgoda</a></h1>
@@ -114,7 +114,7 @@
             </article>
             <article class="postcard dark yellow">
                 <a class="postcard__img_link" href="#">
-                    <img class="postcard__img" src="/image/Location page/havelock imax.jpg" alt="Image Title" />
+                    <img class="postcard__img" src="/Location/havelock imax.jpg" alt="Image Title" />
                 </a>
                 <div class="postcard__text">
                     <h1 class="postcard__title yellow"><a href="#">SCOPE CINEMAS MULTIPLEX - Havelock City Mall</a></h1>
@@ -131,7 +131,7 @@
             </article>
             <article class="postcard dark green">
                 <a class="postcard__img_link" href="#">
-                    <img class="postcard__img" src="/image/Location page/pvr.jpg" alt="Image Title" />
+                    <img class="postcard__img" src="/Location/pvr.jpg" alt="Image Title" />
                 </a>
                 <div class="postcard__text">
                     <h1 class="postcard__title green"><a href="#">PVR One Galle Face Mall</a></h1>
