--- a/Location.html
+++ b/Location.html
@@ -74,9 +74,7 @@
                     <div class="postcard__bar"></div>
                     <div class="postcard__preview-txt">Two screens make up the Liberty cineplex, Liberty Lite and well, the main Liberty cinema. Conveniently located in the heart of Colombo, the cinema has a car park, which allows for easy access and also equipped with snack bar and cafetaria.</div>
                     <ul class="postcard__tagbox">
-                        <li class="tag__item play blue">
-                            <a href="https://maps.app.goo.gl/SiV2qScy6gh1Jo1w9"><i class="fas fa-play mr-2"></i>Location</a>
-                        </li>
+                        <a href="https://maps.app.goo.gl/SiV2qScy6gh1Jo1w9" class="btn btn-brand mx-lg-3">Location</a>
                     </ul>
                 </div>
             </article>
@@ -89,9 +87,7 @@
                     <div class="postcard__bar"></div>
                     <div class="postcard__preview-txt">Boasting with 6 screens with one powered by the latest Dolby Atmos sound system and 4K projection screen, the multiplex is designed to provide an experience on par with some the of the world’s best cinemas right here in the heart of Colombo.</div>
                     <ul class="postcard__tagbox">
-                        <li class="tag__item play red">
-                            <a href="https://maps.app.goo.gl/9apPmXKYHigJwDyY8"><i class="fas fa-play mr-2"></i>Location</a>
-                        </li>
+                        <a href="https://maps.app.goo.gl/9apPmXKYHigJwDyY8" class="btn btn-brand mx-lg-3">Location</a>
                     </ul>
                 </div>
             </article>
@@ -106,9 +102,7 @@
                     <div class="postcard__bar"></div>
                     <div class="postcard__preview-txt">Liberty by Scope Cinemas - Kiribathgoda is equipped with a newly calibrated 5.1 Surround Sound System and a silver screen to elevate our patrons’ cinema experience. Customers can also enjoy our popular freshly-made popcorn flavors at our snack bar, along with other varieties of concessions.</div>
                     <ul class="postcard__tagbox">
-                        <li class="tag__item play green">
-                            <a href="https://maps.app.goo.gl/vb39BVt97AXKct9N9"><i class="fas fa-play mr-2"></i>Location</a>
-                        </li>
+                        <a href="https://maps.app.goo.gl/vb39BVt97AXKct9N9" class="btn btn-brand mx-lg-3">Location</a>
                     </ul>
                 </div>
             </article>
@@ -123,9 +117,7 @@
                     <div class="postcard__bar"></div>
                     <div class="postcard__preview-txt">Our flagship attraction is the first and only IMAX with Laser screen in Sri Lanka, delivering breathtaking visuals and immersive sound that will transport you into the heart of the action. In addition, we feature a Dolby Atmos screen, offering crystal-clear audio that moves around you in a three-dimensional space. </div>
                     <ul class="postcard__tagbox">
-                        <li class="tag__item play yellow">
-                            <a href="https://maps.app.goo.gl/ooaFvfBShHDzEGuRA"><i class="fas fa-play mr-2"></i>Location</a>
-                        </li>
+                        <a href="https://maps.app.goo.gl/ooaFvfBShHDzEGuRA" class="btn btn-brand mx-lg-3">Location</a>
                     </ul>
                 </div>
             </article>
@@ -140,9 +132,7 @@
                     <div class="postcard__bar"></div>
                     <div class="postcard__preview-txt">Liberty by Scope Cinemas - Kiribathgoda is equipped with a newly calibrated 5.1 Surround Sound System and a silver screen to elevate our patrons’ cinema experience. Customers can also enjoy our popular freshly-made popcorn flavors at our snack bar, along with other varieties of concessions.</div>
                     <ul class="postcard__tagbox">
-                        <li class="tag__item play green">
-                            <a href="https://maps.app.goo.gl/3Vzpz9p1N6UFzSZu7"><i class="fas fa-play mr-2"></i>Location</a>
-                        </li>
+                        <a href="https://maps.app.goo.gl/3Vzpz9p1N6UFzSZu7" class="btn btn-brand mx-lg-3">Location</a>
                     </ul>
                 </div>
             </article>
