--- a/Movies.html
+++ b/Movies.html
@@ -43,6 +43,116 @@
                 </div>
             </div>
         </nav>
+
+        <!-- Header 01 -->
+
+    <header class="masthead">
+        <div class="container h-100">
+            <div class="row h-100 align-items-center">
+                <div class="col-12 text-center">
+                    <h1 class="fw-light">Now Showing</h1>
+                </div>
+            </div>
+        </div>
+    </header>
+
+
+    <!-- Cards 01 -->
+
+
+    <div class="container d-flex justify-content-center flex-wrap">
+        <div class="row cards">
+            <div class="col-md-3">
+                <div class="product-wrapper mb-45 text-center">
+                    <div class="product-img"> <a href="#" data-abc="true"> <img src="red-one.jpg"
+                                alt=""> </a> <span class="text-center"><i class="fa fa-rupee"></i>now showing</span>
+                        <div class="product-action">
+                            <div class="product-action-style"> Red One </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="product-wrapper mb-45 text-center">
+                    <div class="product-img"> <a href="#" data-abc="true"> <img src="red-one.jpg"
+                                alt=""> </a> <span><i class="fa fa-rupee"></i> now showing</span>
+                        <div class="product-action">
+                            <div class="product-action-style">Red One</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="product-wrapper mb-45 text-center">
+                    <div class="product-img"> <a href="#" data-abc="true"> <img src="red-one.jpg"
+                                alt=""> </a> <span><i class="fa fa-rupee"></i>now showing</span>
+                        <div class="product-action">
+                            <div class="product-action-style">Red One</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="product-wrapper mb-45 text-center">
+                    <div class="product-img"> <a href="#" data-abc="true"> <img src="red-one.jpg"
+                                alt=""> </a> <span><i class="fa fa-rupee"></i>now showing</span>
+                        <div class="product-action">
+                            <div class="product-action-style">Red One</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+<!-- Card 02 -->
+
+
+    <div class="container d-flex justify-content-center flex-wrap mt-100">
+        <div class="row cards">
+            <div class="col-md-3">
+                <div class="product-wrapper mb-45 text-center">
+                    <div class="product-img"> <a href="#" data-abc="true"> <img src="red-one.jpg"
+                                alt=""> </a> <span class="text-center"><i class="fa fa-rupee"></i>now showing</span>
+                        <div class="product-action">
+                            <div class="product-action-style"> Red One </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="product-wrapper mb-45 text-center">
+                    <div class="product-img"> <a href="#" data-abc="true"> <img src="red-one.jpg"
+                                alt=""> </a> <span><i class="fa fa-rupee"></i> now showing</span>
+                        <div class="product-action">
+                            <div class="product-action-style">Red One</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="product-wrapper mb-45 text-center">
+                    <div class="product-img"> <a href="#" data-abc="true"> <img src="red-one.jpg"
+                                alt=""> </a> <span><i class="fa fa-rupee"></i>now showing</span>
+                        <div class="product-action">
+                            <div class="product-action-style">Red One</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="product-wrapper mb-45 text-center">
+                    <div class="product-img"> <a href="#" data-abc="true"> <img src="red-one.jpg"
+                                alt=""> </a> <span><i class="fa fa-rupee"></i>now showing</span>
+                        <div class="product-action">
+                            <div class="product-action-style">Red One</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     
     
 </body>
