--- a/Select_seat.html
+++ b/Select_seat.html
@@ -42,6 +42,93 @@
         </div>
     </nav>
 
+   <!-- page-header -->
+   <div class="page-header">
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                <div class="page-caption">
+                    <h1 class="page-title">SELECT SEATS</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- movie name  -->
+
+
+<div class="card-section">
+    <div class="container">
+        <div class="card-block mb30">
+            <div class="row">
+                <div class="col-xl-9 col-lg-12 col-md-12 col-sm-12 col-12">
+                    <!-- section-title -->
+                    <div class="section-title mb-0">
+                        <h2>VENOM: THE LAST DANCE</h2>
+                        <select name="pets" id="pet-select">
+                            <option value="">Select Theater</option>
+                            <option value="dog">LIBERTY BY SCOPE CINEMAS - Colpetty</option>
+                            <option value="cat">SCOPE CINEMAS MULTIPLEX - Colombo City Centre</option>
+                            <option value="hamster">LIBERTY BY SCOPE CINEMAS - Kiribathgoda</option>
+                            <option value="parrot">SCOPE CINEMAS MULTIPLEX - Havelock City Mall</option>
+                            <option value="spider">PVR One Galle Face Mall</option>
+                        </select>
+
+                        <select name="pets" id="pet-select" class="mt-4">
+                            <option value="">Select time</option>
+                            <option value="dog">11:00 AM</option>
+                            <option value="cat">01:30 PM</option>
+                            <option value="hamster">04:00 PM</option>
+                            <option value="parrot">10:00 PM</option>
+
+                        </select>
+
+                    </div>
+                    <!-- /.section-title -->
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+
+
+
+<!-- seat -->
+
+<div class="container py-5">
+    <h1 class="text-center mb-4">Movie Seat Booking</h1>
+
+    <!-- Screen Section -->
+    <div class="screen mx-auto">SCREEN</div>
+
+    <!-- Seat Layout -->
+    <div class="d-flex justify-content-center flex-wrap">
+        <!-- Example row of seats -->
+        <div class="seat available" data-status="available">A1</div>
+        <div class="seat available" data-status="available">A2</div>
+        <div class="seat available" data-status="available">A3</div>
+        <div class="seat available" data-status="available">A4</div>
+        <div class="seat available" data-status="available">A5</div>
+        <div class="seat available" data-status="available">A6</div>
+        <div class="seat available" data-status="available">A7</div>
+        <div class="seat available" data-status="available">A8</div>
+        <!-- Repeat rows as needed -->
+    </div>
+
+    <div class="d-flex justify-content-center flex-wrap">
+        <!-- Example row of seats -->
+        <div class="seat available" data-status="available">B1</div>
+        <div class="seat reserved" data-status="reserved">B2</div>
+        <div class="seat available" data-status="available">B3</div>
+        <div class="seat available" data-status="available">B4</div>
+        <div class="seat available" data-status="available">B5</div>
+        <div class="seat available" data-status="available">B6</div>
+        <div class="seat available" data-status="available">B7</div>
+        <div class="seat unavailable" data-status="unavailable">B8</div>
+        <!-- Repeat rows as needed -->
+    </div>
 
 
 </body>
