--- a/Movie_profile.html
+++ b/Movie_profile.html
@@ -45,6 +45,58 @@
             </div>
         </div>
     </nav>
+<!-- background image -->
+
+    <!-- page-header -->
+    <div class="page-header">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    
+    <!-- news -->
+    <div class="card-section">
+        <div class="container">
+            <div class="card-block mb30">
+                <div class="row">
+                    <div class="col-xl-3 col-lg-12 col-md-12 col-sm-12 col-12">
+                        <!-- section-title -->
+                        <div class="section-title mb-0">
+                            <img src="Red_One_poster.jpg" class="img-fluid rounded" alt="">
+                        </div>
+                        <!-- /.section-title -->
+                    </div>
+                    <div class="col-xl-8 col-lg-12 col-md-12 col-sm-12 col-12">
+                        <!-- section-title -->
+                        <div class="section-title mb-0">
+                            <h2>RED ONE</h2>
+                            <p class="english">ENGLISH ACTION</p>
+                            <p class="watch"><a href="#" class="btn btn-brand mx-lg-3">Watch Trailer</a></p>
+                            <p class="infor">
+                                <i class="fa-solid fa-calendar-days pr-2"></i>
+                                06 Nov 2024
+                            </p>
+                            <p class="infor">
+                                <i class="fa-regular fa-clock pr-2"></i>
+                                2 hrs 50 mins
+                            </p>
+                            <p class="infor">
+                                <i class="fa-solid fa-star pr-2"></i>
+                                6.8 / 10
+                            </p>
+                            <a href="/Select seat/select_seat.html" class="btn btn-brand mx-lg-3 mt-3">Book Tickets</a>
+                        </div>
+                        <!-- /.section-title -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 </body>
