Select seat page

--- a/Select_seat.html
+++ b/Select_seat.html
@@ -130,6 +130,65 @@
         <!-- Repeat rows as needed -->
     </div>
 
+    
+    <div class="d-flex justify-content-center flex-wrap">
+        <!-- Example row of seats -->
+        <div class="seat available" data-status="available">D1</div>
+        <div class="seat available" data-status="available">D2</div>
+        <div class="seat available" data-status="available">D3</div>
+        <div class="seat available" data-status="available">D4</div>
+        <div class="seat available" data-status="available">D5</div>
+        <div class="seat reserved" data-status="reserved">D6</div>
+        <div class="seat reserved" data-status="reserved">D7</div>
+        <div class="seat available" data-status="available">D8</div>
+        <!-- Repeat rows as needed -->
+    </div>
+
+    <div class="d-flex justify-content-center flex-wrap">
+        <!-- Example row of seats -->
+        <div class="seat reserved" data-status="reserved">E1</div>
+        <div class="seat reserved" data-status="reserved">E2</div>
+        <div class="seat reserved" data-status="reserved">E3</div>
+        <div class="seat reserved" data-status="reserved">E4</div>
+        <div class="seat selected" data-status="selected">E5</div>
+        <div class="seat available" data-status="available">E6</div>
+        <div class="seat available" data-status="available">E7</div>
+        <div class="seat available" data-status="available">E8</div>
+        <!-- Repeat rows as needed -->
+    </div>
+
+    <div class="d-flex justify-content-center flex-wrap">
+        <!-- Example row of seats -->
+        <div class="seat available" data-status="available">F1</div>
+        <div class="seat reserved" data-status="reserved">F2</div>
+        <div class="seat available" data-status="available">F3</div>
+        <div class="seat available" data-status="available">F4</div>
+        <div class="seat available" data-status="available">F5</div>
+        <div class="seat available" data-status="available">F6</div>
+        <div class="seat available" data-status="available">F7</div>
+        <div class="seat available" data-status="available">F8</div>
+        <!-- Repeat rows as needed -->
+    </div>
+
+    
+
+    <!-- Legend -->
+    <div class="legend d-flex justify-content-center mt-4">
+        <div class="legend-item">
+            <span class="bg-primary"></span> Selected
+        </div>
+        <div class="legend-item">
+            <span class="bg-light"></span> Available
+        </div>
+        <div class="legend-item">
+            <span class="bg-secondary"></span> Reserved
+        </div>
+        <div class="legend-item">
+            <span class="bg-success"></span> Unavailable
+        </div>
+    </div>
+</div>
+
 
 </body>
 </html>
