Upcoming movie page

--- a/Upcoming_movies.html
+++ b/Upcoming_movies.html
@@ -10,6 +10,42 @@
   <link rel="stylesheet" href="Upcoming_movies.css">
 </head>
 <body>
-<h1>Hello-Bootstrap</h1>
+
+
+  
+    <!-- navbar -->
+
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark p-md-3">
+      <div class="container">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav mx-auto">
+                  <li class="nav-item">
+                      <a class="nav-link" href="/Home/home.html">HOME</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="/All movies/all_movies.html">MOVIES</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="/Location/Location.html">LOCATIONS</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="/Home/home.html#deals">DEALS & EXCLUSIVE</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="/Contact us /contact.html">CONTACT US</a>
+                  </li>
+
+              </ul>
+              <a href="/Login/login.html" class="btn btn-brand mx-lg-3">LOGIN</a>
+          </div>
+      </div>
+  </nav>
+
+  
 </body>
 </html>
