Select seat page

--- a/Select_seat.html
+++ b/Select_seat.html
@@ -190,5 +190,27 @@
 </div>
 
 
+
+<div class="container py-4">
+    <!-- Seat Count and Total Section -->
+    <div class="d-flex justify-content-between align-items-center bg-dark text-light rounded-pill p-3">
+        <!-- Seat Number -->
+        <div class="d-flex align-items-center">
+            <i class="bi bi-person-fill me-2"></i> <!-- Bootstrap Icon -->
+            <span id="selected-seats">SEAT NO –</span> <!-- Dynamic seat numbers -->
+        </div>
+
+        <!-- Total Price -->
+        <div class="d-flex align-items-center">
+            <span>Total (LKR)</span>
+            <h5 class="mb-0 ms-2" id="total-price">0.00</h5> <!-- Dynamic total price -->
+            <i class="bi bi-chevron-right ms-3"></i>
+        </div>
+    </div>
+</div>
+
+
+
+
 </body>
 </html>
