--- a/Movie_profile.html
+++ b/Movie_profile.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Red One</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="Movie_profile.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Movie</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
+        integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
+        integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
+        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/d5f76a1949.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="now_showing.css">
 </head>
+
 <body>
 
-
-    
     <!-- navbar -->
 
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark p-md-3">
@@ -45,7 +51,8 @@
             </div>
         </div>
     </nav>
-<!-- background image -->
+
+    <!-- background image -->
 
     <!-- page-header -->
     <div class="page-header">
@@ -99,5 +106,162 @@
     </div>
 
 
+    <!-- Card -->
+
+
+    <div class="container">
+        <div class="card card-custom d-flex align-items-center p-3">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <h5 class="card-title">RED ONE</h5>
+                        <p class="card-text ">
+                            After Santa Claus (code name: Red One) is kidnapped, the North Pole's Head of Security
+                            (Dwayne Johnson) must team up with the world's most infamous bounty hunter (Chris Evans) in
+                            a globe-trotting, action-packed mission to save Christmas.
+                        </p>
+                        <p class="card-text">
+                            Director : Jake Kasdan
+                        </p>
+                        <p class="card-text">
+                            Writers : Chris Morgan, Hiram Garica
+                        </p>
+                        <p class="card-text">
+                            Genres : Action Comedy Fantasy Adventure
+                        </p>
+                    </div>
+                    <div class="col text-center mt-5">
+                        <img src='red-one.jpg' title='' class="img-fluid rounded" />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Top Cats -->
+
+    <div class="container mt-5">
+        <h3 class="topcast text-center">Top cast</h3>
+        <div class="row mt-5 g-4 justify-content-center">
+            <div class="col-md-2 col-sm-6">
+                <div class="box5">
+                    <img class="pic-1 rounded mx-auto"
+                        src="MV5BOWUzNzIzMzQtNzMxYi00OWRiLTlhZjEtZTRjYWVkYzI4ZjMwXkEyXkFqcGc@._V1_.jpg">
+                    <div class="box-content">
+                        <h3 class="title">Dwayan Johnson</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-2 col-sm-6">
+                <div class="box5">
+                    <img class="pic-1" src="MV5BNzQ0YWM1ODEtZDFkYy00MGJhLTkwZDUtMzVkZjljODU3ZTRmXkEyXkFqcGc@._V1_.jpg">
+                    <div class="box-content">
+                        <h3 class="title">Chris Evans</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-2 col-sm-6">
+                <div class="box5">
+                    <img class="pic-1" src="MV5BOTgxODE0MjI5Ml5BMl5BanBnXkFtZTcwMjkxMzMzMg@@._V1_.jpg">
+                    <div class="box-content">
+                        <h3 class="title">Lucy Liu</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-2 col-sm-6">
+                <div class="box5">
+                    <img class="pic-1" src="MV5BMzg2NTI5NzQ1MV5BMl5BanBnXkFtZTgwNjI1NDEwMDI@._V1_.jpg">
+                    <div class="box-content">
+                        <h3 class="title">J.K Simmons</h3>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+<!-- NOW SHOWING AT -->
+
+    <div class="container mt-5">
+        <h3 class="topcast text-center">NOW SHOWING AT</h3>
+        <div class="row mt-5 g-4 justify-content-center">
+            <div class="col-md-2 col-sm-6">
+                <div class="box5">
+                    <a href="/Location/Location.html#scope">
+                        <img class="pic-1 rounded mx-auto"
+                        src="15d9e64a-46ca-4127-b53e-cae904bee3dc.png">
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-2 col-sm-6">
+                <div class="box5">
+                    <a href="/Location/Location.html#havelock">
+                        <img class="pic-1" src="Hcmlogo-removebg-preview.png">
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-2 col-sm-6">
+                <div class="box5">
+                    <a href="/Location/Location.html#pvr">
+                        <img class="pic-1" src="png-clipart-pvr-cinemas-logo-cinema-logos-removebg-preview.png">
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-2 col-sm-6">
+                <div class="box5">
+                    <a href="/Location/Location.html#liberty">
+                        <img class="pic-1" src="scope-cinemas-logo-w.png">
+                    </a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+    <!-- Footer -->
+
+    <div class="footer-dark">
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 item">
+                        <ul>
+                            <li><a href="#">HOME</a></li>
+                            <li><a href="#">MOVIES</a></li>
+                            <li><a href="#">LOCATION</a></li>
+                            <li><a href="#">DEALS & EXCLUSIVE</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4 item">
+                        <ul>
+                            <li><a href="#">Company</a></li>
+                            <li><a href="#">Team</a></li>
+                            <li><a href="#">Careers</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4 item text">
+                        <h3>BBBootstrap.com</h3>
+                        <p>Praesent sed lobortis mi. </p>
+                    </div>
+                </div>
+                <div class="item social mt-5 text-center">
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-instagram"></i></a>
+                    <a href="#"><i class="fa fa-google"></i></a>
+                </div>
+                <hr class="mb-4">
+                <div class="copy">
+                    <p class="copyright text-center">Copyright © 2024 JAVA Ltd. All Rights Reserved.</p>
+                </div>
+            </div>
+        </footer>
+    </div>
+
+
+    <link rel="stylesheet" href="movie.js">
+
 </body>
+
 </html>
