--- a/Upcoming_movies.html
+++ b/Upcoming_movies.html
@@ -46,6 +46,18 @@
       </div>
   </nav>
 
+  <!-- background image -->
+
+    <!-- page-header -->
+    <div class="page-header">
+      <div class="container">
+          <div class="row">
+              <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+
+              </div>
+          </div>
+      </div>
+  </div>
   
 </body>
 </html>
