upcoming movie page

--- a/Upcoming_movies.html
+++ b/Upcoming_movies.html
@@ -59,5 +59,30 @@
       </div>
   </div>
   
+    
+     <!-- section-title -->
+     <div class="section-title mb-0">
+      <h2>RED ONE</h2>
+      <p class="english">ENGLISH ACTION</p>
+      <p class="watch"><a href="#" class="btn btn-brand mx-lg-3">Watch Trailer</a></p>
+      <p class="infor">
+          <i class="fa-solid fa-calendar-days pr-2"></i>
+          06 Nov 2024
+      </p>
+      <p class="infor">
+          <i class="fa-regular fa-clock pr-2"></i>
+          2 hrs 50 mins
+      </p>
+      <p class="infor">
+          <i class="fa-solid fa-star pr-2"></i>
+          6.8 / 10
+      </p>
+  </div>
+  <!-- /.section-title -->
+</div>
+</div>
+</div>
+</div>
+</div>
 </body>
 </html>
