upcoming movie  page

--- a/Upcoming_movies.html
+++ b/Upcoming_movies.html
@@ -84,5 +84,36 @@
 </div>
 </div>
 </div>
+<!-- Card -->
+
+
+<div class="container">
+  <div class="card card-custom d-flex align-items-center p-3">
+      <div class="card-body">
+          <div class="row">
+              <div class="col">
+                  <h5 class="card-title">RED ONE</h5>
+                  <p class="card-text ">
+                      After Santa Claus (code name: Red One) is kidnapped, the North Pole's Head of Security
+                      (Dwayne Johnson) must team up with the world's most infamous bounty hunter (Chris Evans) in
+                      a globe-trotting, action-packed mission to save Christmas.
+                  </p>
+                  <p class="card-text">
+                      Director : Jake Kasdan
+                  </p>
+                  <p class="card-text">
+                      Writers : Chris Morgan, Hiram Garica
+                  </p>
+                  <p class="card-text">
+                      Genres : Action Comedy Fantasy Adventure
+                  </p>
+              </div>
+              <div class="col text-center mt-5">
+                  <img src='red-one.jpg' title='' class="img-fluid rounded" />
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
 </body>
 </html>
