upcoming movie page

--- a/Upcoming_movies.html
+++ b/Upcoming_movies.html
@@ -115,5 +115,48 @@
       </div>
   </div>
 </div>
+  <!-- Top Cats -->
+
+  <div class="container mt-5">
+    <h3 class="topcast text-center">Top cast</h3>
+    <div class="row mt-5 g-4 justify-content-center">
+        <div class="col-md-2 col-sm-6">
+            <div class="box5">
+                <img class="pic-1 rounded mx-auto"
+                    src="MV5BOWUzNzIzMzQtNzMxYi00OWRiLTlhZjEtZTRjYWVkYzI4ZjMwXkEyXkFqcGc@._V1_.jpg">
+                <div class="box-content">
+                    <h3 class="title">Dwayan Johnson</h3>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-2 col-sm-6">
+            <div class="box5">
+                <img class="pic-1" src="MV5BNzQ0YWM1ODEtZDFkYy00MGJhLTkwZDUtMzVkZjljODU3ZTRmXkEyXkFqcGc@._V1_.jpg">
+                <div class="box-content">
+                    <h3 class="title">Chris Evans</h3>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-2 col-sm-6">
+            <div class="box5">
+                <img class="pic-1" src="MV5BOTgxODE0MjI5Ml5BMl5BanBnXkFtZTcwMjkxMzMzMg@@._V1_.jpg">
+                <div class="box-content">
+                    <h3 class="title">Lucy Liu</h3>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-2 col-sm-6">
+            <div class="box5">
+                <img class="pic-1" src="MV5BMzg2NTI5NzQ1MV5BMl5BanBnXkFtZTgwNjI1NDEwMDI@._V1_.jpg">
+                <div class="box-content">
+                    <h3 class="title">J.K Simmons</h3>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+
 </body>
 </html>
