--- a/Upcoming_movies.html
+++ b/Upcoming_movies.html
@@ -157,6 +157,51 @@
     </div>
 </div>
 
+ <!-- Footer -->
 
+ <div class="footer-dark">
+  <footer>
+      <div class="container">
+          <div class="row">
+              <div class="col-md-4 item">
+                  <ul>
+                      <li><a href="#">HOME</a></li>
+                      <li><a href="#">MOVIES</a></li>
+                      <li><a href="#">LOCATION</a></li>
+                      <li><a href="#">DEALS & EXCLUSIVE</a></li>
+                  </ul>
+              </div>
+              <div class="col-md-4 item">
+                  <ul>
+                      <li><a href="#">Company</a></li>
+                      <li><a href="#">Team</a></li>
+                      <li><a href="#">Careers</a></li>
+                  </ul>
+              </div>
+              <div class="col-md-4 item text">
+                  <h3>BBBootstrap.com</h3>
+                  <p>Praesent sed lobortis mi. </p>
+              </div>
+          </div>
+          <div class="item social mt-5 text-center">
+              <a href="#"><i class="fa fa-facebook"></i></a>
+              <a href="#"><i class="fa fa-twitter"></i></a>
+              <a href="#"><i class="fa fa-instagram"></i></a>
+              <a href="#"><i class="fa fa-google"></i></a>
+          </div>
+          <hr class="mb-4">
+          <div class="copy">
+              <p class="copyright text-center">Copyright © 2024 JAVA Ltd. All Rights Reserved.</p>
+          </div>
+      </div>
+  </footer>
+</div>
+
+
+<link rel="stylesheet" href="movie.js">
+
+</body>
+
+</html>
 </body>
 </html>
